fixed z-index issue on sticky title

--- a/style.css
+++ b/style.css
@@ -735,6 +735,7 @@ a {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1000;
   margin: 2.5rem 2rem .5rem 2rem; }
 
 .entry-title {
